# sample-FAST-applications

./: .gitignore  CONTRIBUTING.md  README.md
.github/: labeler.yml
.github/workflows/: ash-security-scan.yml  dependabot.yml  js-lint.yml  python-lint.yml  repo-stats.yml
samples/agentic-knowledge-discovery/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
samples/agentic-knowledge-discovery/frontend/: README.md  eslint.config.mjs  index.html
samples/agentic-knowledge-discovery/infra-cdk/: config.yaml  package-lock.json  package.json
samples/agentic-knowledge-discovery/scripts/: README.md  deploy-frontend.py  generate_sample_data.py
samples/aws-specialist-agent/: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README-jp.md  README.md  pyproject.toml  ruff.toml
samples/aws-specialist-agent/.ash/: ash.yaml
samples/aws-specialist-agent/docker/: docker-compose.yml
samples/aws-specialist-agent/docs-jp/: AGENTCORE_EVALUATIONS_GUIDE.md  AGENT_CONFIGURATION.md  CEDAR_POLICY_GUIDE.md  CONTEXT_MANAGEMENT.md  DEPLOYMENT.md  GATEWAY.md  IDENTITY_POLICY.md  LOCAL_DEVELOPMENT.md  LOCAL_DOCKER_TESTING.md  MEMORY_INTEGRATION.md  REPLACING_COGNITO.md  (+6 more)
samples/copilotkit-generative-ui/: README.md
samples/dual-monitoring-system/: pyproject.toml
samples/generative-ui/: pyproject.toml
samples/generative-ui/docs/: COPILOTKIT_FEATURES.md
samples/generative-ui/frontend/: eslint.config.mjs
samples/generative-ui/frontend/src/components/chat/CopilotKit/examples/generative-ui/: ToolReasoning.tsx
samples/generative-ui/frontend/src/hooks/: useCopilotExamples.tsx
samples/llm-council/: Makefile  README.md
samples/restaurant-assistant/: README.md
(+265 files in other folders)
