[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilotkit-generative-ui"
version = "1.0.0"
description = "CopilotKit + FAST: Generative UI and Shared State on AWS Bedrock AgentCore"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "CopilotKit", email = "support@copilotkit.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "boto3>=1.34.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

agent-langgraph = [
    "langchain>=1.2.0",
    "langgraph>=1.1.0",
    "langchain-aws>=1.4.0",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph-checkpoint-aws>=1.0.0",
    "bedrock-agentcore>=1.4.0",
    "copilotkit>=0.1.0",
    "PyJWT[crypto]>=2.12.0",
]

agent-strands = [
    "strands-agents>=1.32.0",
    "ag-ui-strands>=0.1.0",
    "bedrock-agentcore>=1.4.0",
    "mcp>=1.26.0",
    "PyJWT[crypto]>=2.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
